Implement dp generation on client side

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ECX - DP</title>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="/dp/src/css/style.css">
-	<link rel="stylesheet" type="text/css" href="/dp/src/fonts/themify-icons.css">
+	<link rel="stylesheet" type="text/css" href="src/css/style.css">
+	<link rel="stylesheet" type="text/css" href="src/fonts/themify-icons.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
