--- a/index.html
+++ b/index.html
@@ -30,23 +30,24 @@
 				<li class="ti">Upload your picture (for best experience, crop the picture to square)</li>
 				<li class="ti">Click on Create your own DP</li>
 				<li class="ti">Dont forget to share on 
+					<span class="ti-whatsapp" style="color: rgb(0, 250, 0);">whatsapp</span>, 
 					<span class="ti-facebook" style="color: rgb(29, 45, 130);">facebook</span>, 
 					<span class="ti-twitter" style="color: #03A9F4;">twitter</span>, 
-					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#ECXconf, #ECX)</li>
+					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#ECX)</li>
 			</ul>
 		</section>
 
 		<section class="top">
 
-			<div class="author-cont">
+			<!--<div class="author-cont">
 				<p>This webapp was created by a <span class="tint">ECX</span> team member, <span class="tint">Geektutor</span> make sure you checkout his social 
 				page below for his other works: <p>		
-				<!-- <ul>
+				 <ul>
 					<li><a href="https://twitter.com/Geektutor"><i class="ti-twitter"></i>Geektutor on Twitter</a>
 					<li><a href="https://github.com/Geektutor"><i class="ti-github"></i>Geektutor on Github</a>
 					<li><a href="https://www.facebook.com/Geektutor"><i class="ti-facebook"></i>Geektutor on Facebook</a>
-				</ul>	 -->
-			</div>
+				</ul>
+			</div>-->
 
 			<form enctype="multipart/form-data" action="" method="POST" onsubmit="event.preventDefault();">
 				<fieldset>
@@ -91,8 +92,8 @@
 	</main>
 
 	<footer>
-		<p> &copy; ECX 2019. All Rights Reserved. Follow on Linkedln 
-			<a href="https://ng.linkedin.com/in/Geektutor" class="social">@Geektutor</p>
+		<p> &copy; ECX 2019. All Rights Reserved. Follow on Twitter
+			<a href="https://twitter.com/Geektutor" class="social">@Geektutor</p>
 	</footer>
 	
 	<script src="src/js/jquery.min.js"></script>
