Added a css class name and font for the name of the dp entry

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="src/css/style.css">
 	<link rel="stylesheet" type="text/css" href="src/fonts/themify-icons.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 </head>
 <body>
 
