--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ECX - DP</title>
+  <title>Fitila - DP</title>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="src/css/style.css">
 	<link rel="stylesheet" type="text/css" href="src/fonts/themify-icons.css">
@@ -15,7 +15,7 @@
 <body>
 
 	<header>
-		<h1>ENGINEERING CAREER EXPO 2019</h1>
+		<h1>Fitila</h1>
 	</header>
 
 	<main>
@@ -23,7 +23,7 @@
 		<section class="under">			
 			<div>
 				<h2>Display Picture (DP) Generator</h2>
-				<p class="">Upload photo to create your ECX 2019 DP</p>
+				<p class="">Upload photo to create your Fitila DP</p>
 				<p class="step">To generate your personalized DP</p>
 			</div>	
 			<ul>
@@ -34,7 +34,7 @@
 					<span class="ti-whatsapp" style="color: rgb(0, 250, 0);">whatsapp</span>, 
 					<span class="ti-facebook" style="color: rgb(29, 45, 130);">facebook</span>, 
 					<span class="ti-twitter" style="color: #03A9F4;">twitter</span>, 
-					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#ECX)</li>
+					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#Fitila)</li>
 			</ul>
 		</section>
 
@@ -93,7 +93,7 @@
 	</main>
 
 	<footer>
-		<p> &copy; ECX 2019. All Rights Reserved. Follow on Twitter
+		<p> &copy; Fitila 2019. All Rights Reserved. Follow on Twitter
 			<a href="https://twitter.com/Geektutor" class="social">@Geektutor</p>
 	</footer>
 	
