--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ECX - DP</title>
+  <title>DP Generator</title>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="src/css/style.css">
 	<link rel="stylesheet" type="text/css" href="src/fonts/themify-icons.css">
@@ -14,7 +14,7 @@
 <body>
 
 	<header>
-		<h1>ENGINEERING CAREER EXPO 2019</h1>
+		<h1>DP Generator</h1>
 	</header>
 
 	<main>
@@ -22,7 +22,7 @@
 		<section class="under">			
 			<div>
 				<h2>Display Picture (DP) Generator</h2>
-				<p class="">Upload photo to create your ECX 2019 DP</p>
+				<p class="">Upload photo to create your DP</p>
 				<p class="step">To generate your personalized DP</p>
 			</div>	
 			<ul>
@@ -32,22 +32,11 @@
 				<li class="ti">Dont forget to share on 
 					<span class="ti-facebook" style="color: rgb(29, 45, 130);">facebook</span>, 
 					<span class="ti-twitter" style="color: #03A9F4;">twitter</span>, 
-					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#ECXconf, #ECX)</li>
+					<span class="ti-instagram" style="color: #00BCD4;">instagram</span>, and make sure you hashtag (#DP)</li>
 			</ul>
 		</section>
 
 		<section class="top">
-
-			<div class="author-cont">
-				<p>This webapp was created by a <span class="tint">ECX</span> team member, <span class="tint">Geektutor</span> make sure you checkout his social 
-				page below for his other works: <p>		
-				<!-- <ul>
-					<li><a href="https://twitter.com/Geektutor"><i class="ti-twitter"></i>Geektutor on Twitter</a>
-					<li><a href="https://github.com/Geektutor"><i class="ti-github"></i>Geektutor on Github</a>
-					<li><a href="https://www.facebook.com/Geektutor"><i class="ti-facebook"></i>Geektutor on Facebook</a>
-				</ul>	 -->
-			</div>
-
 			<form enctype="multipart/form-data" action="" method="POST" onsubmit="event.preventDefault();">
 				<fieldset>
 					<legend class="ti-camera"></legend>
@@ -91,8 +80,8 @@
 	</main>
 
 	<footer>
-		<p> &copy; ECX 2019. All Rights Reserved. Follow on Linkedln 
-			<a href="https://ng.linkedin.com/in/Geektutor" class="social">@Geektutor</p>
+		<p> &copy; DP 2019. All Rights Reserved. Follow on
+			<a href="https://github.com/geektutor/dp" class="social">Github</p>
 	</footer>
 	
 	<script src="src/js/jquery.min.js"></script>
