Added some punctuation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<p class="step">To generate your personalized DP</p>
 			</div>	
 			<ul>
-				<li class="ti">Enter your name in the name field below</li>
+				<li class="ti">Enter your name in the name field below:</li>
 				<li class="ti">Upload your picture (for best experience, crop the picture to square)</li>
 				<li class="ti">Click on Create your own DP</li>
 				<li class="ti">Dont forget to share on 
