--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
 	
 	<script src="src/js/jquery.min.js"></script>
     <script src="src/js/jquery.cropit.js"></script>
-	<script src="src/js/main.js"></script>
+	<script src="src/js/name.js"></script>
 </body>
 </html>
